[gd_scene load_steps=48 format=3 uid="uid://1bb0gptrt3vb"]

[ext_resource type="Script" path="res://Scripts/Player/player.gd" id="1_cu2hi"]
[ext_resource type="Texture2D" uid="uid://qaq0m3mue2ks" path="res://Assets/dark-knight/spritesheets/1x/dark-knight-master.png" id="2_6b03t"]
[ext_resource type="Script" path="res://Scripts/Player/player_manager.gd" id="2_tqcyk"]
[ext_resource type="PackedScene" uid="uid://unbq8lw5lfc4" path="res://Scenes/Hitbox.tscn" id="3_1t1yo"]
[ext_resource type="Script" path="res://Scripts/state_machine.gd" id="3_gjsw8"]
[ext_resource type="PackedScene" uid="uid://b1mj2rau38rmd" path="res://Scenes/Hurtbox.tscn" id="3_hmkif"]
[ext_resource type="Texture2D" uid="uid://qq3qnbpah7v0" path="res://Assets/hp_energy_bar/spritesheets/1x/hp-icon.png" id="3_w0575"]
[ext_resource type="Texture2D" uid="uid://b2wghcfthtqmv" path="res://Assets/large-potion/spritesheets/1x/heath-pot-master.png" id="4_fpjnb"]
[ext_resource type="Script" path="res://Scripts/Player/idle.gd" id="4_gt1js"]
[ext_resource type="Texture2D" uid="uid://b53a78i00b83v" path="res://Assets/hp_energy_bar/spritesheets/1x/energy-bar.png" id="4_ivr12"]
[ext_resource type="Shader" path="res://Scripts/hitflash.gdshader" id="4_l2r1d"]
[ext_resource type="Texture2D" uid="uid://ced8hn0ftgrwn" path="res://Assets/large-potion/spritesheets/1x/blue-potion-master.png" id="5_2b5kb"]
[ext_resource type="PackedScene" uid="uid://dbht2dsahpn6h" path="res://Scenes/Foundbox.tscn" id="5_8hqoo"]
[ext_resource type="Script" path="res://Scripts/Player/jump.gd" id="5_vcr8a"]
[ext_resource type="Script" path="res://Scripts/Player/move.gd" id="6_54xpy"]
[ext_resource type="Script" path="res://Scripts/Player/fall.gd" id="7_80m41"]
[ext_resource type="Texture2D" uid="uid://npkloflbb6p8" path="res://Assets/dark-knight/png/1x/selector.png" id="7_c65jw"]
[ext_resource type="Script" path="res://Scripts/Player/ground_attack.gd" id="8_qmjvt"]
[ext_resource type="Script" path="res://Scripts/Player/death_fall.gd" id="14_pp513"]
[ext_resource type="Script" path="res://Scripts/Player/drink_potion.gd" id="15_axn3b"]
[ext_resource type="Script" path="res://Scripts/Player/final.gd" id="15_mgw7f"]
[ext_resource type="Script" path="res://Scripts/Player/air_attack.gd" id="17_8ed2s"]
[ext_resource type="AudioStream" uid="uid://bo2xti7lnxxg5" path="res://Assets/sounds/player/ground_attack.wav" id="23_3ej4s"]
[ext_resource type="AudioStream" uid="uid://cjflndnifpxym" path="res://Assets/sounds/player/jump.wav" id="24_6vj7y"]
[ext_resource type="AudioStream" uid="uid://cgma5ixdti1w5" path="res://Assets/sounds/player/potion.wav" id="25_7r8eo"]
[ext_resource type="AudioStream" uid="uid://dha7tl6j1jkdb" path="res://Assets/sounds/player/walking.wav" id="26_ot0jx"]
[ext_resource type="AudioStream" uid="uid://jd1ladesjggu" path="res://Assets/sounds/player/air_attack.wav" id="27_nqmqy"]
[ext_resource type="AudioStream" uid="uid://bb26kiy6yyv7b" path="res://Assets/sounds/hit.wav" id="28_qm3fp"]
[ext_resource type="AudioStream" uid="uid://dk5cfyyxv6cn0" path="res://Assets/sounds/player/player_death.mp3" id="29_f6clu"]

[sub_resource type="Animation" id="Animation_jil67"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("sprite:frame_coords")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Foundbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("audio/audio_ground_attack:playing")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("audio/audio_potion:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("audio/audio_walking:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("audio/audio_air_attack:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("state_machine/ground_attack:fire_projectile")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("state_machine/air_attack:fire_projectile")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_c8esf"]
resource_name = "air_attack"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [38, 39, 40, 41, 42, 43, 44, 45]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("audio/audio_air_attack:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("state_machine/air_attack:fire_projectile")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_iaolu"]
resource_name = "death"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [33, 34, 35, 36, 37]
}

[sub_resource type="Animation" id="Animation_qut3k"]
resource_name = "death_fall"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Foundbox/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hurtbox/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [31, 32]
}

[sub_resource type="Animation" id="Animation_m4slg"]
resource_name = "drink_energy"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("audio/audio_potion:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_46i1l"]
resource_name = "drink_health"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("audio/audio_potion:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_64tgu"]
resource_name = "fall"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18]
}

[sub_resource type="Animation" id="Animation_rsnhh"]
resource_name = "ground_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 30]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("audio/audio_ground_attack:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("state_machine/ground_attack:fire_projectile")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_48q0f"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_g2t8e"]
resource_name = "jump"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_a63ye"]
resource_name = "run"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(3, 0), Vector2i(4, 0), Vector2i(5, 0), Vector2i(6, 0), Vector2i(7, 0), Vector2i(8, 0), Vector2i(9, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("audio/audio_walking:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, true, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a2qb0"]
_data = {
"RESET": SubResource("Animation_jil67"),
"air_attack": SubResource("Animation_c8esf"),
"death": SubResource("Animation_iaolu"),
"death_fall": SubResource("Animation_qut3k"),
"drink_energy": SubResource("Animation_m4slg"),
"drink_health": SubResource("Animation_46i1l"),
"fall": SubResource("Animation_64tgu"),
"ground_attack": SubResource("Animation_rsnhh"),
"idle": SubResource("Animation_48q0f"),
"jump": SubResource("Animation_g2t8e"),
"run": SubResource("Animation_a63ye")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wtfeg"]
shader = ExtResource("4_l2r1d")
shader_parameter/active = false
shader_parameter/tint = Color(1, 0.109804, 0, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nuo8a"]
radius = 4.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_eqxju"]
radius = 4.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y4pno"]
radius = 7.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2mxgt"]
radius = 4.0
height = 16.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_t5r0p"]
radius = 4.0
height = 16.0

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_layer = 2
collision_mask = 5
script = ExtResource("1_cu2hi")

[node name="player_manager" type="Node" parent="."]
script = ExtResource("2_tqcyk")

[node name="camera" type="Camera2D" parent="."]
offset = Vector2(0, -25)
zoom = Vector2(5, 5)

[node name="hp_display" type="Sprite2D" parent="camera"]
position = Vector2(-90, -80)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_w0575")
hframes = 4

[node name="energy_display" type="Sprite2D" parent="camera"]
position = Vector2(-89, -66)
texture = ExtResource("4_ivr12")
hframes = 4

[node name="health_pot_display" type="Sprite2D" parent="camera"]
position = Vector2(-59, -79)
texture = ExtResource("4_fpjnb")
hframes = 3

[node name="energy_pot_display" type="Sprite2D" parent="camera"]
position = Vector2(-59, -65)
texture = ExtResource("5_2b5kb")
hframes = 3

[node name="selector_display" type="Sprite2D" parent="camera"]
position = Vector2(-59, -72)
texture = ExtResource("7_c65jw")
hframes = 2

[node name="animations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a2qb0")
}

[node name="sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_wtfeg")
position = Vector2(0, -24)
texture = ExtResource("2_6b03t")
hframes = 68
frame = 2

[node name="body" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_nuo8a")

[node name="Foundbox" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("5_8hqoo")]
collision_layer = 2
collision_mask = 0
sprite = NodePath("../sprite")

[node name="CollisionShape2D" parent="Foundbox" index="0"]
shape = SubResource("CapsuleShape2D_eqxju")

[node name="Hitbox" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("3_1t1yo")]
collision_layer = 8
collision_mask = 4
sprite = NodePath("../sprite")

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(11, 0)
shape = SubResource("CapsuleShape2D_y4pno")
disabled = true

[node name="Hurtbox" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("3_hmkif")]
collision_layer = 2
collision_mask = 260
sprite = NodePath("../sprite")

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CapsuleShape2D_2mxgt")

[node name="state_machine" type="Node" parent="." node_paths=PackedStringArray("starting_state")]
script = ExtResource("3_gjsw8")
starting_state = NodePath("idle")

[node name="idle" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "jump_state", "move_state", "ground_attack_state", "death_fall_state", "drink_potion_state")]
script = ExtResource("4_gt1js")
fall_state = NodePath("../fall")
jump_state = NodePath("../jump")
move_state = NodePath("../move")
ground_attack_state = NodePath("../ground_attack")
death_fall_state = NodePath("../death_fall")
drink_potion_state = NodePath("../drink_potion")
animation_name = "idle"

[node name="move" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "jump_state", "ground_attack_state", "death_fall_state", "drink_potion_state")]
script = ExtResource("6_54xpy")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
jump_state = NodePath("../jump")
ground_attack_state = NodePath("../ground_attack")
death_fall_state = NodePath("../death_fall")
drink_potion_state = NodePath("../drink_potion")
animation_name = "run"

[node name="jump" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "idle_state", "move_state", "air_attack_state", "death_fall_state")]
script = ExtResource("5_vcr8a")
fall_state = NodePath("../fall")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
air_attack_state = NodePath("../air_attack")
death_fall_state = NodePath("../death_fall")
jump_force = 300.0
animation_name = "jump"

[node name="fall" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state", "death_fall_state")]
script = ExtResource("7_80m41")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
death_fall_state = NodePath("../death_fall")
animation_name = "fall"

[node name="drink_potion" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state", "death_fall_state")]
script = ExtResource("15_axn3b")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
death_fall_state = NodePath("../death_fall")
animation_name = "drink_health"

[node name="ground_attack" type="Node" parent="state_machine" node_paths=PackedStringArray("idle_state", "move_state", "death_fall_state")]
script = ExtResource("8_qmjvt")
idle_state = NodePath("../idle")
move_state = NodePath("../move")
death_fall_state = NodePath("../death_fall")
animation_name = "ground_attack"

[node name="air_attack" type="Node" parent="state_machine" node_paths=PackedStringArray("fall_state", "death_fall_state")]
script = ExtResource("17_8ed2s")
fall_state = NodePath("../fall")
death_fall_state = NodePath("../death_fall")
animation_name = "air_attack"

[node name="death_fall" type="Node" parent="state_machine" node_paths=PackedStringArray("final_state")]
script = ExtResource("14_pp513")
final_state = NodePath("../final")
animation_name = "death_fall"

[node name="final" type="Node" parent="state_machine"]
script = ExtResource("15_mgw7f")
animation_name = "death"

[node name="audio" type="Node" parent="."]

[node name="audio_ground_attack" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("23_3ej4s")
volume_db = -5.0

[node name="audio_jump" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("24_6vj7y")

[node name="audio_potion" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("25_7r8eo")
volume_db = -5.0

[node name="audio_walking" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("26_ot0jx")
volume_db = -10.0

[node name="audio_air_attack" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("27_nqmqy")
volume_db = -5.0

[node name="audio_hurt" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("28_qm3fp")

[node name="audio_death" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource("29_f6clu")

[node name="BoundryBox" parent="." node_paths=PackedStringArray("sprite") instance=ExtResource("3_hmkif")]
collision_layer = 0
collision_mask = 512
sprite = NodePath("../sprite")

[node name="CollisionShape2D" parent="BoundryBox" index="0"]
shape = SubResource("CapsuleShape2D_t5r0p")

[connection signal="animation_finished" from="animations" to="state_machine/drink_potion" method="_on_animations_animation_finished"]
[connection signal="animation_finished" from="animations" to="state_machine/ground_attack" method="_on_animations_animation_finished"]
[connection signal="animation_finished" from="animations" to="state_machine/air_attack" method="_on_animations_animation_finished"]
[connection signal="animation_finished" from="animations" to="state_machine/final" method="_on_animations_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="player_manager" method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="player_manager" method="_on_hurtbox_area_exited"]
[connection signal="area_entered" from="BoundryBox" to="player_manager" method="_on_boundry_box_area_entered"]

[editable path="Foundbox"]
[editable path="Hitbox"]
[editable path="Hurtbox"]
[editable path="BoundryBox"]
